<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="Home"/>
    <item
        android:id="@+id/shopping"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart_24"
        android:title="Buy"/>
    <item
        android:id="@+id/qrCode"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_qr_code_scanner"
        android:title="QRScanner"/>
    <item
        android:id="@+id/Location"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="Location"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_box_24"
        android:title="Profile"/>
</menu>